import changes from local shell

--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -1,5 +1,39 @@
-## Colored tmux $PS1 prompt
-set -g default-terminal "xterm-256color"
+# terminal colors
+set -ga terminal-overrides ",screen-256color*:Tc"
+set-option -g default-terminal "screen-256color"
+set -s escape-time 0
+
+# Use C-a instead so I can use default C-b for nested sessions
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+set -g base-index 1
+set -g status-style 'bg=#333333 fg=#5eacd3'
+
+# vim-like visual mode - shortcut near hjkl controls
+bind-key -n ^K copy-mode \; send k 0 v e
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+# vim-like pane switching
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+# bindings to resize active pane
+bind -r K resize-pane -U 5
+bind -r J resize-pane -D 5
+bind -r H resize-pane -L 5
+bind -r L resize-pane -R 5
+
+
+bind-key -r f run-shell "tmux neww $__MLP_PATH/configs/tmux/bin/tmux-sessionizer"
+
 
 
 ## New panes open in same directory as parent
@@ -8,12 +42,3 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-
-## Mouse scroll
-setw -g mouse on
-
-# Use v to trigger selection    
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-
-# Use y to yank current selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
