--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -34,7 +34,8 @@ bind -r L resize-pane -R 5
 
 bind-key -r f run-shell "tmux neww $__MLP_PATH/configs/tmux/bin/tmux-sessionizer"
 
-
+# You need to have $__MLP_PATH present, else tmux will silently crash
+set-option -g default-command "source $__MLP_PATH/mlp"
 
 ## New panes open in same directory as parent
 ##   https://gist.github.com/william8th/faf23d311fc842be698a1d80737d9631
