--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -37,6 +37,9 @@ bind-key -r f run-shell "tmux neww $__MLP_PATH/configs/tmux/bin/tmux-sessionizer
 # You need to have $__MLP_PATH present, else tmux will silently crash
 set-option -g default-command "source $__MLP_PATH/mlp"
 
+# If closing the last terminal, try attaching a different session
+set-option -g detach-on-destroy off
+
 ## New panes open in same directory as parent
 ##   https://gist.github.com/william8th/faf23d311fc842be698a1d80737d9631
 bind c new-window -c "#{pane_current_path}"
